--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "build-shared": "webpack --mode development --config ./shared-webpack.config.js",
     "build": "webpack --mode development --config ./webpack.config.js"
   },
   "dependencies": {
