--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "webpack --mode development --config ./webpack.config.js"
+    "build": "webpack --mode development --config ./webpack.config.js",
+    "watch": "webpack --watch --mode development --config ./webpack.config.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
